--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,8 @@
         "email": "chaplin@dandart.co.uk"
     }, 
     "require": {
+        "php": ">=5.3.0",
+        "ext-amqp": ">=1.2.0"
     },
     "autoload": {
         "psr-4": {
